# SensoRob

./: .gitignore  .gitmodules  Dockerfile_backup  LICENSE  README-INSTALL.md  README.md  compile_and_start_ethercat.sh
ik_algorithms/sensorob_sensorob_group_ikfast_plugin/: CMakeLists.txt  package.xml  sensorob_sensorob_group_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
ik_algorithms/sensorob_sensorob_group_ikfast_plugin/src/: sensorob_sensorob_group_ikfast_moveit_plugin.cpp  sensorob_sensorob_group_ikfast_solver.cpp
ik_algorithms/trac_ik/trac_ik_kinematics/: CMakeLists.txt
ik_algorithms/trac_ik/trac_ik_kinematics/trac_ik_kinematics_plugin/: CMakeLists.txt
ik_algorithms/trac_ik/trac_ik_lib/: CMakeLists.txt
ik_algorithms/trac_ik/trac_ik_lib/include/trac_ik/: dual_quaternion.h  nlopt_ik.hpp
interfaces/sensorob_ik/: CMakeLists.txt  README.md  package.xml
interfaces/sensorob_ik/include/sensorob_ik/: file_logger.h  fk.h  ik.h  ik_interface.h  logger.h  viz.h
interfaces/sensorob_ik/launch/: ik.launch.py  ik_random.launch.py
interfaces/sensorob_ik/src/: file_logger.cpp  ik.cpp  logger.cpp  viz.cpp
interfaces/sensorob_ik/src/ik_interface/: fk.cpp  ik_interface.cpp
interfaces/sensorob_ik/src/ik_interface_random/: fk.cpp  ik_interface.cpp
interfaces/sensorob_planner/: CMakeLists.txt  README.md  package.xml
interfaces/sensorob_planner/include/sensorob_planner/: file_logger.h  launch_args_processor.h  logger.h  obstacle_dimensions.h  obstacles.h  planner.h
interfaces/sensorob_planner/launch/: planner.launch.py
interfaces/sensorob_planner/src/: file_logger.cpp  launch_args_processor.cpp  logger.cpp  obstacles.cpp  planner.cpp
interfaces/sensorob_trajectory_logger/: CMakeLists.txt  README.md  package.xml
interfaces/sensorob_trajectory_logger/config/: config.yaml
interfaces/sensorob_trajectory_logger/include/sensorob_trajectory_logger/: file_logger.h  launch_args_processor.h  obstacles.h  trajectory_logger.h
interfaces/sensorob_trajectory_logger/launch/: trajectory_logger.launch.py
interfaces/sensorob_trajectory_logger/src/: file_logger.cpp  launch_args_processor.cpp  logger.cpp  obstacles.cpp  trajectory_logger.cpp
interfaces/sensorob_trajectory_logger/src/python_visualizer/: joint_states_visualizer.py  trajectory_visualizer.py
sensorob/: CMakeLists.txt  README.md  package.xml
sensorob/config/: gaz_ros2_ctl_use_sim.yaml  moveit_controllers.yaml  sensorob_controllers.yaml
sensorob/config/joints_driver_config/: senso_joint_1.yaml  senso_joint_1_advanced.yaml  senso_joint_2.yaml  senso_joint_2_advanced.yaml  senso_joint_3.yaml  senso_joint_3_advanced.yaml  senso_joint_4.yaml  senso_joint_4_advanced.yaml  senso_joint_5.yaml  senso_joint_6.yaml  senso_joint_6_advanced.yaml
sensorob/launch/: controller_control_node.launch.py  controller_spawner.launch.py  controllers.launch.py  gazebo.launch.py  moveit.launch.py  rsp.launch.py  rviz.launch.py
sensorob/launch/demos/: kinematics.launch.py  moveit_mock.launch.py  moveit_real.launch.py  moveit_sim.launch.py
sensorob_config/: .setup_assistant  CMakeLists.txt  package.xml
sensorob_config/config/: joint_limits.yaml  kinematics.yaml  sensorob.ros2_control.xacro  sensorob.srdf  sensorob.urdf.xacro
sensorob_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
sensorob_description/: CMakeLists.txt  README.md  package.xml
sensorob_description/config/: joint_parameters.yaml
sensorob_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
sensorob_description/meshes/: base_link.stl  link_1.stl  link_3.stl  link_4.stl  link_4_1.stl  link_5.stl  link_5_1.stl  link_6.stl  link_6_1.stl
sensorob_description/urdf/: materials.xacro  robot_core.xacro  ros2_control.xacro  sensorob.gazebo  sensorob.trans  sensorob.urdf  sensorob.urdf.xacro  sensorob.xacro
sensorob_ik_interface/: CMakeLists.txt  README.md  package.xml
sensorob_ik_interface/include/sensorob_ik_interface/: fk.h  ik.h  ik_interface.h  viz.h
sensorob_ik_interface/launch/: ik_interface.launch.py  ik_interface_random.launch.py
sensorob_ik_interface/src/: fk.cpp  ik.cpp  ik_interface.cpp  logger.cpp  viz.cpp
sensorob_ik_interface/src/ik_interface/: fk.cpp  ik_interface.cpp
sensorob_ik_interface/src/ik_interface_random/: fk.cpp  ik_interface.cpp
sensorob_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
sensorob_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.rviz  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_sim.rviz  ompl_planning.yaml  ros2_controllers.yaml  sensorob.ros2_control.xacro  sensorob.srdf  sensorob.urdf.xacro  stomp_planning.yaml
sensorob_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
sensorob_sensorob_group_ikfast_plugin/: package.xml  update_ikfast_plugin.sh
sensorob_sensorob_group_ikfast_plugin/src/: sensorob_sensorob_group_ikfast_solver.cpp
sensorob_sim/: CMakeLists.txt  README.md  package.xml
sensorob_sim/config/: sensorob_controllers.yaml
sensorob_sim/launch/: gazebo.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  rviz.launch.py
sensorob_sim/launch/demo/: kinematics.launch.py  moveit_fake.launch.py  moveit_sim.launch.py
trac_ik/trac_ik_kinematics/trac_ik_kinematics_plugin/src/: trac_ik_kinematics_plugin.cpp
trac_ik/trac_ik_lib/include/trac_ik/: trac_ik.hpp
